# TauTerm

./: .containerignore  .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile.keyring-test  Containerfile.ssh-test  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TODO.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite-plugin-licenses.ts  vite.config.js  vitest.config.ts  wdio.conf.ts
.claude/: settings.json
.claude/agents/: tauterm-architect.md  tauterm-domain-expert.md  tauterm-frontend-dev.md  tauterm-moe.md  tauterm-perf-expert.md  tauterm-rust-dev.md  tauterm-security-expert.md  tauterm-test-engineer.md  tauterm-user-rep.md  tauterm-ux-designer.md
.github/workflows/: ci-integration.yml  ci.yml  release.yml
docs/: AD.md  ARCHITECTURE.md  FS.md  UR.md  UXD.md
docs/adr/: ADR-0001-tauri-2-as-application-framework.md  ADR-0002-pty-native-rust.md  ADR-0003-vt-parser-library.md  ADR-0004-svelte-5-runes-frontend-state.md  ADR-0005-platform-abstraction-layer.md  ADR-0006-ipc-coarse-grained.md  ADR-0007-ssh-via-rust-ssh-library.md  ADR-0008-terminal-rendering-strategy.md  ADR-0009-pane-structure-flat-list.md  ADR-0010-session-state-delta-events.md  ADR-0011-scrollback-rust-ring-buffer.md  ADR-0012-preferences-json-file.md  (+17 more)
project.inlang/: settings.json
scripts/: bench-vtebench.sh  bump-version.sh  check-all.sh  check-spdx.sh  generate-licenses.sh  pre-push  prepare-release.sh  run-keyring-tests-inner.sh  run-keyring-tests.sh  run-ssh-tests-inner.sh  run-ssh-tests.sh  ssh-test-sshd_config
src/: CLAUDE.md  app.css  app.html  vite-env.d.ts
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/.config/: nextest.toml
src-tauri/benches/: coalescer_bench.rs  ipc_throughput.rs  vt_throughput.rs
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: vt_processor.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  error.rs  events.rs  ipc.rs  lib.rs  main.rs  platform.rs  preferences.rs  security_load.rs  security_static_checks.rs  session.rs  ssh.rs  vt.rs  webview_data_dir.rs
src-tauri/src/commands/: connection_cmds.rs  input_cmds.rs  preferences_cmds.rs  session_cmds.rs  ssh_cmds.rs  ssh_prompt_cmds.rs  system_cmds.rs  testing.rs
src-tauri/src/commands/system_cmds/: clipboard.rs  preferences.rs  session.rs  tests.rs  url.rs  window.rs
src-tauri/src/commands/system_cmds/tests/: security_tests.rs
src-tauri/src/events/: types.rs
src-tauri/src/platform/: clipboard_linux.rs  clipboard_macos.rs  clipboard_windows.rs  credentials_linux.rs  credentials_macos.rs  credentials_windows.rs  notifications_linux.rs  notifications_macos.rs  notifications_windows.rs  pty_injectable.rs  pty_linux.rs  pty_macos.rs  pty_windows.rs  validation.rs
src-tauri/src/platform/pty_linux/: backend.rs  session.rs  tests.rs
src-tauri/src/platform/pty_linux/tests/: environment.rs  io_operations.rs  lifecycle.rs
src-tauri/src/preferences/: schema.rs  store.rs  types.rs  watcher.rs
src-tauri/src/preferences/schema/: appearance.rs  keyboard.rs  language.rs  patch.rs  terminal.rs  tests.rs  theme.rs
src-tauri/src/preferences/schema/tests/: schema.rs
src-tauri/src/preferences/store/: io.rs  lock.rs  migration.rs  path.rs  schema_convert.rs  tests.rs  validation.rs
src-tauri/src/session/: ids.rs  lifecycle.rs  output.rs  pane.rs  pty_task.rs  registry.rs  resize.rs  ssh_injectable.rs  ssh_task.rs  tab.rs
src-tauri/src/session/output/: coalescer.rs  emitter.rs  event_builders.rs  process_output.rs  tests.rs
src-tauri/src/session/pty_task/: emitter.rs  event_builders.rs  reader.rs
src-tauri/src/session/registry/: layout.rs  pane_ops.rs  pane_prefs.rs  pane_state.rs  pty_helpers.rs  shell.rs  tab_ops.rs  tests.rs
src-tauri/src/session/ssh_task/: tests.rs
src-tauri/src/ssh/: algorithms.rs  auth.rs  connection.rs  keepalive.rs  known_hosts.rs  manager.rs
src-tauri/src/ssh/known_hosts/: store.rs  tests.rs
src-tauri/src/ssh/known_hosts/tests/: store.rs
src-tauri/src/ssh/manager/: connect.rs  io_ops.rs  lifecycle.rs  tests.rs
src-tauri/src/ssh/manager/tests/: host_key_sequencing.rs  manager_tests.rs  rfc4254_tests.rs  security_tests.rs
src-tauri/src/vt/: cell.rs  charset.rs  modes.rs  mouse.rs  osc.rs  processor.rs  screen_buffer.rs  search.rs  sgr.rs
src-tauri/src/vt/processor/: dispatch.rs  emoji.rs  regional_indicator.rs  screen.rs  tests.rs  write.rs
src-tauri/src/vt/processor/dispatch/: csi_cursor.rs  csi_erase.rs  csi_misc.rs  csi_modes.rs  csi_scroll.rs  esc.rs  execute.rs  helpers.rs  osc.rs  print.rs
src-tauri/src/vt/processor/tests/: basic.rs  caps.rs  cursor_dirty.rs  device_attributes.rs  editing.rs  features.rs  helpers.rs  modes.rs  resize_full_redraw.rs  security.rs
src-tauri/src/vt/processor/tests/editing/: bell.rs  char_insert_delete.rs  cursor.rs  cursor_shape.rs  line_insert_delete.rs  osc_title.rs  reverse_index.rs  scrolling.rs  text_composition.rs  wrap_mode.rs
src-tauri/src/vt/screen_buffer/: buffer.rs  dirty_region.rs  dirty_rows.rs  operations.rs  scrollback.rs  snapshot.rs  tests.rs
src-tauri/src/vt/screen_buffer/tests/: buffer.rs  dirty_region.rs  dirty_rows.rs  erase.rs  scroll.rs  snapshot.rs
src-tauri/src/vt/search/: api.rs  literal.rs  logical_lines.rs  matcher.rs  tests.rs  text_conversion.rs
src-tauri/src/vt/search/tests/: alt_screen.rs  helpers.rs  literal_search.rs  regex_search.rs  soft_wrap.rs  text_conversion.rs
src-tauri/src/vt/sgr/: tests.rs
src-tauri/tests/: async_concurrency.rs  credential_regression.rs  credentials_integration.rs  del_key_pty_roundtrip.rs  dsr_responses.rs  export_bindings.rs  ipc_command_handlers.rs  ipc_type_coherence.rs  preferences_concurrent.rs  preferences_roundtrip.rs  preferences_schema_validation.rs  pty_teardown.rs  session_registry_topology.rs  ssh_coalescer_integration.rs  ssh_integration.rs  vt_processor_integration.rs
tests/: tsconfig.json
(+301 files in other folders)
