[package]
name = "tau-term"
version = "0.1.0"
description = "Terminal emulator for Linux"
license = "MPL-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tau_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PTY management
portable-pty = "0.9"

# VT parsing
vte = "0.15"

# SSH
russh = "0.60"
russh-keys = "0.45"

# Credential store (Secret Service D-Bus — Linux)
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

# Clipboard
arboard = "3"

# Concurrency utilities
dashmap = "6"
parking_lot = "0.12"

# UUID generation for newtype IDs
uuid = { version = "1", features = ["v4"] }

# Unicode / character width
unicode-width = "0.2"

# Regex engine (DFA-based, no ReDoS risk) for scrollback search
regex = "1"

# Base64 encoding (known_hosts key encoding)
base64 = "0.22"

# Platform directories (config, data, cache paths)
dirs = "6"

# Desktop notifications (D-Bus org.freedesktop.Notifications on Linux)
notify-rust = { version = "4", default-features = false, features = ["d"] }

[dev-dependencies]
# Temporary files and directories for tests
tempfile = "3"
# Serialize fd-sensitive tests to prevent /proc/self/fd count noise in parallel nextest runs
serial_test = "3"

